<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_eventbus"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="true"
            android:title="@string/title_eventbus"/>

    <item
            android:id="@+id/navigation_otto"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_otto"/>

    <item
            android:id="@+id/navigation_rxbus_old"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_rxbus_old"/>
    <item
            android:id="@+id/navigation_rxbus_new"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/title_rxbus_new"/>

    <item
            android:id="@+id/navigation_messenger"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/title_messenger"/>

</menu>
